--- a/toyota.html
+++ b/toyota.html
@@ -81,7 +81,7 @@
         </div>
 
         <div id="copyright">
-            <p>&copy; All Rights Reserved | Designed by Sibusiso McViller</p>
+            <p>&copy; All Rights Reserved | Designed by PADDINGTON KARIMATSENGA</p>
         </div>
 
     </body>
